--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <!--Navigation-->
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -24,18 +24,20 @@
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+110001111111</a></li>
         </ul>
       </address>
     </header>
 
     <main>
+        <section>
       <h1>Effective solutions for your business</h1>
       <button type="button">Order service</button>
+    </section>
 
       <section>
         <h2 hidden>h</h2>
-        <un>
+        <ul>
           <li>
             <h3>Strategy</h3>
             <p>
@@ -64,29 +66,34 @@
               deep passion for problem-solving.
             </p>
           </li>
-        </un>
+        </ul>
       </section>
 
       <section>
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/Rectangle 71.jpg" alt="desktop" 
-            width="360"
-            height="300"
-            />
-            
-          </li>
-          <li>
-            <img src="./images/Rectangle 72.jpg" alt="cellphones" 
-            width="360"
-            height="300"
+            <img
+              src="./images/desktop.jpg"
+              alt="desktop"
+              width="360"
+              height="300"
             />
           </li>
           <li>
-            <img src="./images/Rectangle 73.jpg" alt="pc and cellphone" 
-            width="360"
-            height="300"
+            <img
+              src="./images/cellphones.jpg"
+              alt="cellphones"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/cellphone.jpg"
+              alt="pc and cellphone"
+              width="360"
+              height="300"
             />
           </li>
         </ul>
@@ -95,33 +102,41 @@
         <h2>Our team</h2>
         <ul>
           <li>
-            <img src="./images/marc-guerrero.jpg" alt="marc-guerrero img"
-            width="264"
-            height="260"
+            <img
+              src="./images/marc-guerrero.jpg"
+              alt="marc-guerrero img"
+              width="264"
+              height="260"
             />
             <h3>Marc Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tom-ford.jpg" alt="tom ford img"
-            width="264"
-            height="260"
+            <img
+              src="./images/tom-ford.jpg"
+              alt="tom ford img"
+              width="264"
+              height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camila-garcia.jpg" alt="camila-garcia img" 
-            width="264"
-            height="260"
+            <img
+              src="./images/camila-garcia.jpg"
+              alt="camila-garcia img"
+              width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/daniel-wilson.jpg" alt="danial-wilson img" 
-            width="264"
-            height="260"
+            <img
+              src="./images/daniel-wilson.jpg"
+              alt="danial-wilson img"
+              width="264"
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UL Designer</p>
@@ -130,7 +145,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.Increase the flow of customers and sales
