--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+110001111111">+110001111111</a></li>
+          <li><a href="tel:+110001111111">+11(000)1111111</a></li>
         </ul>
       </address>
     </header>
 
     <main>
-        <section>
-      <h1>Effective solutions for your business</h1>
-      <button type="button">Order service</button>
-    </section>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
 
       <section>
         <h2 hidden>h</h2>
@@ -99,7 +99,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
@@ -108,7 +108,7 @@
               width="264"
               height="260"
             />
-            <h3>Marc Guerrero</h3>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -139,7 +139,7 @@
               height="260"
             />
             <h3>Daniel Wilson</h3>
-            <p>UL Designer</p>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
