--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+110001111111">+11(000)1111111</a></li>
+          <li><a href="tel:+11(000)1111111">+11(000)1111111</a></li>
         </ul>
       </address>
     </header>
@@ -148,8 +148,7 @@
       <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.Increase the flow of customers and sales
-        for your business with digital marketing & growth solutions.
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
